--- a/src/app/pages/forms/form-inputs/form-inputs.component.html
+++ b/src/app/pages/forms/form-inputs/form-inputs.component.html
@@ -1,59 +1,60 @@
 <div class="row">
   <div class="col-lg-6">
-   
-    <nb-card>
-          <nb-card-header>Registro de visitante</nb-card-header>
-          <nb-card-body>
-            <form (ngSubmit)="form.form.valid && registar()" #form="ngForm" autocomplete="nope">
-              <div class="form-group">
-                <label for="exampleInputEmail1">Número de ficho</label>
-                <input type="number" class="form-control"  name="ficho" id="Nficho" placeholder="Número de ficho">
-                
-              </div>
-              <div class="row">
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <label for="inputFirstName">Nombres</label>
-                      <input type="text" class="form-control" id="inputFirstName" placeholder="Nombres">
-                    </div>
-                  </div>
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <label for="inputLastName">Apellidos</label>
-                      <input type="text" class="form-control" id="inputLastName" placeholder="Apellidos">
-                    </div>
-                  </div>
-                </div>
-              <div class="form-group">
-                <label for="exampleInputPassword1">Identificación</label>
-                <input type="number" class="form-control" id="exampleInputPassword1" placeholder="Identificacíon">
-              </div>
-              <div class="row">
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <label for="inputFirstName">Responsable </label>
-                      <input type="text" class="form-control" id="inputFirstName" placeholder="Responsable de recibir al visitante">
-                    </div>
-                  </div>
-                  <div class="col-sm-6">
-                    <div class="form-group">
-                      <label for="inputLastName">Apartamento</label>
-                      <input type="text" class="form-control" id="inputLastName" placeholder="Apartamento de destino">
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Fecha de salida</label>
-                    <input type="date" class="form-control" id="exampleInputPassword1" placeholder="Fecha de posible salida de la unidad">
-                  </div>
 
-              
+    <nb-card>
+      <nb-card-header>Registro de visitante</nb-card-header>
+      <nb-card-body>
+        <form (ngSubmit)="form.form.valid && registar()" #form="ngForm" autocomplete="nope">
+          <div class="form-group">
+            <label for="exampleInputEmail1">Número de ficho</label>
+            <input type="number" class="form-control" name="ficho" id="Nficho" placeholder="Número de ficho">
+
+          </div>
+          <div class="row">
+            <div class="col-sm-6">
               <div class="form-group">
-                <nb-checkbox>Tiene vehículo</nb-checkbox>
+                <label for="inputFirstName">Nombres</label>
+                <input type="text" class="form-control" id="inputFirstName" placeholder="Nombres">
               </div>
-              <button  class="btn btn-success" >Registrar</button>
-            </form>
-          </nb-card-body>
-        </nb-card>          
-  </div>  
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="inputLastName">Apellidos</label>
+                <input type="text" class="form-control" id="inputLastName" placeholder="Apellidos">
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Identificación</label>
+            <input type="number" class="form-control" id="exampleInputPassword1" placeholder="Identificacíon">
+          </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="inputFirstName">Responsable </label>
+                <input type="text" class="form-control" id="inputFirstName" placeholder="Responsable de recibir al visitante">
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label for="inputLastName">Apartamento</label>
+                <input type="text" class="form-control" id="inputLastName" placeholder="Apartamento de destino">
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Fecha de salida</label>
+            <input type="date" class="form-control" id="exampleInputPassword1" placeholder="Fecha de posible salida de la unidad">
+          </div>
+          <div class="form-group">
+            <nb-checkbox>Tiene vehículo</nb-checkbox>
+          </div>
+          <div class="form-group">
+            <button class="btn btn-success">Registrar</button>
+            <button class="btn btn-primary" (click)="emergente.showStaticModal()">Static modal</button>
+          </div>
+        </form>
+      </nb-card-body>
+    </nb-card>
+  </div>
 </div>
