--- a/src/app/pages/forms/form-layouts/form-layouts.component.html
+++ b/src/app/pages/forms/form-layouts/form-layouts.component.html
@@ -1,19 +1,30 @@
-<div class="row">
+<div class="row" >
     <div class="col-lg-6">
 <div class="row">
   <div class="col-md-12">
       <nb-card>
           <nb-card-header>Control de acceso</nb-card-header>
           <nb-card-body>
-            <form>
+            <form (ngSubmit)="form.form.valid && verificar()" #form="ngForm" autocomplete="nope">
+                <div *ngIf="errors && errors.length > 0" class="alert alert-danger" role="alert">
+                    <div *ngFor="let error of errors">{{ error }}</div>
+                </div>
+                
+                <div *ngIf="messages && messages.length > 0" class="alert alert-success" role="alert">
+                    <div *ngFor="let message of messages">{{ message }}</div>
+                </div>
+
               <div class="form-group">
                 <label for="exampleInputEmail1">Número de ficho</label>
-                <input type="number" class="form-control" id="exampleInputEmail1" placeholder="Ingrese el número de ficho del visitante">
+                <input type="number" name="ficho" [(ngModel)]="user.id" class="form-control" id="nficho" placeholder="Ingrese el número de ficho del visitante" 
+                #ficho="ngModel" [class.form-control-danger]="ficho.invalid && ficho.touched" autofocus [required]="true">
+                <small  align="left" class="form-text error" *ngIf="ficho.invalid && ficho.touched && ficho.errors?.required">
+                    Numero de ficho requerido!</small>
               </div>             
-              <div class="form-group">
-                <nb-checkbox>Recordar</nb-checkbox>
+              <div class="form-group accept-group col-sm-12">
+                  <nb-checkbox name="rememberMe" [(ngModel)]="user.rememberMe">Recordarme</nb-checkbox>
               </div>
-              <button type="submit" class="btn btn-success">Verificar</button>
+              <button [disabled]="!form.valid" type="submit" class="btn btn-success">Verificar</button>
             </form>
           </nb-card-body>
         </nb-card>
