Al fin el @#$%& modal al menos abre - aun no se implementan componentes dentro del modal

--- a/src/app/pages/forms/form-inputs/form-inputs.component.html
+++ b/src/app/pages/forms/form-inputs/form-inputs.component.html
@@ -50,8 +50,7 @@
             <nb-checkbox>Tiene vehículo</nb-checkbox>
           </div>
           <div class="form-group">
-            <button class="btn btn-success">Registrar</button>
-            <button class="btn btn-primary" (click)="emergente.showStaticModal()">Static modal</button>
+            <button class="btn btn-success" (click)="registrar()">Registrar</button>
           </div>
         </form>
       </nb-card-body>
