Errores finales corregidos

--- a/src/app/pages/forms/form-inputs/form-inputs.component.html
+++ b/src/app/pages/forms/form-inputs/form-inputs.component.html
@@ -4,7 +4,7 @@
     <nb-card>
       <nb-card-header>Registro de visitante</nb-card-header>
       <nb-card-body>
-        <form (ngSubmit)="form.form.valid && registar()" #form="ngForm" autocomplete="nope">
+        <form (ngSubmit)="form.form.valid && registrar()" #form="ngForm" autocomplete="nope">
           <div class="form-group">
             <label for="exampleInputEmail1">Número de ficho</label>
             <input type="number" class="form-control" name="ficho" id="Nficho" placeholder="Número de ficho">
@@ -50,7 +50,7 @@
             <nb-checkbox>Tiene vehículo</nb-checkbox>
           </div>
           <div class="form-group">
-            <button class="btn btn-success" (click)="registrar()">Registrar</button>
+            <button class="btn btn-success" >Registrar</button>
           </div>
         </form>
       </nb-card-body>
