--- a/src/app/pages/ui-features/modals/modal/modal.component.html
+++ b/src/app/pages/ui-features/modals/modal/modal.component.html
@@ -10,7 +10,7 @@
 
 
 <div class="pre-form">
-        <form (ngSubmit)="form.form.valid && registar()" #form="ngForm" autocomplete="nope">
+        <form (ngSubmit)="form.form.valid && registrar()" #form="ngForm" autocomplete="nope">
                 <div class="form-group">
                   <label for="exampleInputEmail1">Número de ficho</label>
                   <input type="number" class="form-control" name="ficho" id="Nficho" placeholder="Número de ficho">
