--- a/src/app/pages/ui-features/modals/modal/modal.component.scss
+++ b/src/app/pages/ui-features/modals/modal/modal.component.scss
@@ -6,9 +6,9 @@ form {
   margin: 2rem 2rem 2rem 2rem;
   color:white !important;
   text-align: left;
-  font-size: 30px;
+  font-size: 20px;
 }
-.modal-header, .modal-footer {
+.modal-header {
   background-color: #00d977;
 }
 .pre-form {
