--- a/src/app/pages/ui-features/modals/modal/modal.component.html
+++ b/src/app/pages/ui-features/modals/modal/modal.component.html
@@ -9,23 +9,35 @@
 </div> -->
 <div class="modal-dialog">
     <form (ngSubmit)="form.form.valid && closeModal()" #form="ngForm" autocomplete="nope">
+
+            <div *ngIf="errors && errors.length > 0" class="alert alert-danger" role="alert">
+                    <div *ngFor="let error of errors">{{ error }}</div>
+                </div>
+                
+                <div *ngIf="messages && messages.length > 0" class="alert alert-success" role="alert">
+                    <div *ngFor="let message of messages">{{ message }}</div>
+                </div>
+                
         <div class="row">
             <div class="col-sm-6">
                 <div class="form-group">
                     <label for="inputFirstName">Placa</label>
-                    <input type="text" class="form-control" id="inputFirstName" size="10" placeholder="Placa" [(ngModel)]="placa" name="placa">
+                    <input type="text" name="placa" class="form-control" id="nplaca" size="10" placeholder="Placa" [(ngModel)]="placa" 
+                      [required]="true">                   
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="form-group">
                     <label for="inputLastName">Marca</label>
-                    <input type="text" class="form-control" id="inputLastName" size="10" placeholder="Marca" [(ngModel)]="marca" name="marca">
+                    <input type="text" class="form-control" id="inputLastName" size="10" placeholder="Marca" [(ngModel)]="marca" name="marca"
+                     [required]="true">
+                    
                 </div>
             </div>
         </div>
         <br>
         <div class="form-group2">
-            <button class="btn btn-success">Registrar</button>
+            <button [disabled]="!form.valid" class="btn btn-success">Registrar</button>
         </div>
         <!-- <div class="modal-footer">
             <button class="btn btn-md btn-primary" (click)="closeModal()">Save changes</button>
